# sentinel

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  sentinel.example.toml  zones.json
.github/workflows/: ci.yml
demos/: README.md
src/: config.py  pipeline.py
src/analytics/: dwell.py  models.py  service.py  utils.py
src/detection/: models.py  service.py  utils.py
src/sentinel/: cli.py  cli_utils.py  config.py  config_loader.py  image_pipeline.py  logging.py  pipeline.py  server.py  video_pipeline.py
src/sentinel/analytics/: dwell.py  service.py  utils.py
src/sentinel/api/: app.py  dependencies.py  middleware.py  routes.py  schemas.py  utils.py
src/sentinel/detection/: models.py  service.py  utils.py
src/sentinel/visualization/: annotators.py
src/visualization/: annotators.py
tests/: test_api.py  test_config.py  test_detection.py
