[project]
name = "sentinel"
version = "0.1.0"
description = "Real-time object detection and tracking system"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.121.2",
    "lap>=0.5.12",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "python-multipart>=0.0.20",
    "structlog>=25.5.0",
    "supervision>=0.26.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ultralytics>=8.3.228",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]

[project.scripts]
detect = "sentinel.cli:main"
serve = "sentinel.server:main"

[dependency-groups]
dev = [
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"